RESOLVED FIXED306229
[Site Isolation] Fix ProcessSwap.UseWebProcessCacheForLoadInNewView
https://bugs.webkit.org/show_bug.cgi?id=306229
Summary [Site Isolation] Fix ProcessSwap.UseWebProcessCacheForLoadInNewView
Sihui Liu
Reported 2026-01-25 14:05:33 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-25 14:06:17 PST
Sihui Liu
Comment 2 2026-01-25 14:09:22 PST
EWS
Comment 3 2026-01-26 23:10:46 PST
Committed 306265@main (0105360ee958): <https://commits.webkit.org/306265@main> Reviewed commits have been landed. Closing PR #57219 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.