[Site Isolation] Fix ProcessSwap.UseWebProcessCacheForLoadInNewView https://bugs.webkit.org/show_bug.cgi?id=306229 rdar://168880666

Reviewed by Per Arne Vollan.

Under Site Isolation, there could be more than one prewarmed web process for performance (see 300594@main). Therefore,
`_webProcessCountIgnoringPrewarmed` should actually count the number of prewarmed process, instead of assuming there is
only one prewarmed process.

* Source/WebKit/UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool _webProcessCountIgnoringPrewarmed]):

Canonical link: https://commits.webkit.org/306265@main